repair overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@ body,
     background-color: #010026;
     @apply text-white;
 }
+
+html,
+body,
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
